prepare for netlify

--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,4 @@ baseURL = "http://usgirlsdontwanttodothat.com/"
 languageCode = "en-us"
 title = "us girls dont want to do that"
 theme = "hugo-paper"
+publishDir = "public"
