--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://usgirlsdontwanttodothat.com/"
+baseURL = "https://usgirlsdontwanttodothat.com/"
 languageCode = "en-us"
 title = "us girls dont want to do that"
 theme = "hugo-paper"
